# types.js
@@ -7,4 +7,14 @@ const boardType = {
 	missionBoard: 1
 }
 
-export { groupType, boardType }
+const groupStatusType = {
+	PUBLIC: 1,
+	PRIVATE: 2
+}
+
+const missionType = {
+	GROUP: 1,
+	INDIVIDUAL: 2
+}
+
+export { groupType, boardType, groupStatusType, missionType }
